# template_python_package

./: .gitignore  README.md  flake.nix  pyproject.toml
