[project]
name = "template_python_package"
description = "Template python package using nix-direnv and setuptools"
version = "0.1.0"
authors = [
		{ name = "Upal Bhattacharya", email = "upal.bhattacharya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"